fixed social media icon bug, images were covering eachother unknowingly

--- a/src/routes/Entertainment/components/Bio/bio.module.scss
+++ b/src/routes/Entertainment/components/Bio/bio.module.scss
@@ -11,10 +11,10 @@
     word-spacing: 2px;
     text-align: center;
     max-width: 100%;
-    img {
-        width: 60%; 
-        max-width: 250px;
-    }
+}
+.logo {
+    width: 60%; 
+    max-width: 250px;
 }
 
 .largeBio {
